# chatbot-ua

./: .gitmodules  config.py  config.yaml  llm.yaml  main.py  pyproject.toml  requirements.txt
src/backend/: app.py
src/backend/llm/api/: custom_api.py
src/backend/objects/: chat.py
src/chatbot_ua/: app.py
src/chatbot_ua/llm/api/: custom_api.py
tests/chatbot_ua/llm/api/: test_custom_api.py
