[project]
name = "chatbot-ua"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pyright (>=1.1.400,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "litellm (==1.67.1)"
]

[tool.poetry]
packages = [{include = "chatbot_ua", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
